# monitoring_toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
detectors/: base_detector.py  confidence_detector.py  registry.py  repetition_detector.py  similarity_detector.py
examples/: basic_usage.ipynb  basic_usage.py
monitoring_toolkit/detectors/: __init__.py  base_detector.py  confidence_detector.py  registry.py  repetition_detector.py  result.py  similarity_detector.py
monitoring_toolkit/utils/: query.py
tests/: test_confidence_detector.py  test_repetition_detector.py  test_similarity_detector.py
